syntax = "proto3";
package v1;

option go_package="/v1";

enum InvalidFieldType {
  INVALID_FIELD_TYPE_UNKNOWN = 0;
  INVALID_FIELD_TYPE_RESTAURANT_NAME = 1;
  INVALID_FIELD_TYPE_ITEM_NAME = 2;

  INVALID_FIELD_TYPE_LONGITUDE = 3;
  INVALID_FIELD_TYPE_LATITUDE = 4;
  INVALID_FIELD_TYPE_DISTANCE = 5;

  INVALID_FIELD_TYPE_CONDITIONS = 6;
  INVALID_FIELD_TYPE_SEARCH_LOCATIONS_CONDITIONS = 7;

  INVALID_FIELD_TYPE_PAGING = 8;
  INVALID_FIELD_TYPE_MAX_CONTENTS_PER_PAGE = 9;
  INVALID_FIELD_TYPE_PAGE_NUMBER = 10;
}

// エラー種別を表現
enum InvalidReasonType {
  INVALID_REASON_TYPE_UNKNOWN = 0;

  // 必須項目が指定されていないエラー
  //  "is required"
  INVALID_REASON_TYPE_IS_REQUIRED = 1;

  // 特定の閾値以下の値が指定されているエラー
  //  "must be greater than {{min_value}}"
  INVALID_REASON_TYPE_MUST_BE_GREATER_THAN = 2;

  // 指定の閾値より小さい値が指定されているエラー
  //  "must be greater than or equal to {{min_value}}"
  INVALID_REASON_TYPE_MUST_BE_GREATER_THAN_OR_EQUAL_TO = 3;

  // 特定の値でない値が指定されているエラー
  //  "must be equal to {{value}}"
  INVALID_REASON_TYPE_MUST_BE_EQUAL_TO = 4;

  // 特定の閾値以上の値が指定されているエラー
  //  "must be less than {{max_value}}"
  INVALID_REASON_TYPE_MUST_BE_LESS_THAN = 5;

  // 特定の閾値より大きい値が指定されているエラー
  //  "must be less than or equal to {{max_value}}"
  INVALID_REASON_TYPE_MUST_BE_LESS_THAN_OR_EQUAL_TO = 6;

  // 特定の日付以前の日付が指定されているエラー
  //  "must be after to {{min_date}}"
  INVALID_REASON_TYPE_DATE_MUST_BE_AFTER = 7;

  // 特定の日付より前の日付が指定されているエラー
  //  "must be after or equal to {{min_date}}"
  INVALID_REASON_TYPE_DATE_MUST_BE_AFTER_OR_EQUAL_TO = 8;

  // 同時に指定できない複数の項目が同時にしていされているエラー
  //  "must not be set together"
  INVALID_REASON_TYPE_MUST_BE_SET_TOGETHER = 9;

  // 重複して指定してはいけない値が重複して指定されているエラー
  //  "must not be duplicated"
  INVALID_REASON_TYPE_MUST_NOT_BE_DUPLICATED = 10;

  // 特定のTimeStampより前のTimeStampが指定されているエラー
  //  "must be after or equal to {{min_timestamp}}"
  INVALID_REASON_TYPE_TIMESTAMP_MUST_BE_AFTER_OR_EQUAL_TO = 11;
}

message ValidationErrorDetails {
  // validation error となった field  (複数の field を対象とする validation をかける場合は複数になる)
  repeated ValidationTargetField fields = 1;

  // validation error となった理由
  InvalidReasonType reason = 2;

  // validation error の理由(文字列)に埋め込む値等
  map<string, string> reason_options = 3;

  // validation error の理由(文字列)に埋め込む値等 ( 表示する言語に従った翻訳/変換が必要 )
  //  value としては "recognized_at_to" のようなキーが設定される
  map<string, string> reason_localized_options = 4;

  // 任意の文字列, 開発者が読んでエラー内容を理解できる文字列であることが望ましい。
  string description = 5;
}

message ValidationTargetField {
  //  validation error となった field の種別
  InvalidFieldType field = 1;
  // validation error となった field がどの位置 (階層構造のどの階層) か
  repeated InvalidFieldLocation field_location = 2;
}

// validation error となった field の位置を表現
message InvalidFieldLocation {
  // field の種別
  InvalidFieldType field = 1;
  // field が array の場合、その index
  optional uint32 array_index = 2;
  // field が map の場合、その key
  optional string map_key = 3;
}